# financial-data-lab

./: README.md  pyproject.toml
src/financial_data_lab/: __init__.py  cli.py
src/financial_data_lab/core/: hashing.py  jsoncanon.py
src/financial_data_lab/store/: artifacts.py  events.py  export.py  layout.py  manifests.py  ocr.py  pdf_pages.py
tests/: test_determinism.py  test_events.py  test_ocr_cli.py
